test/corpus/parameters.txt
===================
Zero parameter rule
===================

some_fact();

---
(source_file
  (fact_definition
    name: (identifier)))


=============================
Boolean (true) parameter rule
=============================

some_fact(true);

---
(source_file
  (fact_definition
    name: (identifier)
    parameter: (parameter
      literal: (bool))))


=============================
Boolean (false) parameter rule
=============================

some_fact(false);

---
(source_file
  (fact_definition
    name: (identifier)
    parameter: (parameter
      literal: (bool))))


=======================
Integer parameter rule
=======================

some_fact(42);

---

(source_file
  (fact_definition
    name: (identifier)
    parameter: (parameter
      literal: (int))))


======================
String parameter rule
======================

some_fact("hello");

---

(source_file
  (fact_definition
    name: (identifier)
    parameter: (parameter
      literal: (string))))


======================
Object parameter rule
======================

some_fact(Organization{"acme"});

---

(source_file
  (fact_definition
    name: (identifier)
    parameter: (parameter
      literal: (object_literal
        type: (identifier)
        value: (string)))))


============================
Untyped named parameter rule
============================

some_fact(some_variable);

---

(source_file
  (fact_definition
    name: (identifier)
    parameter: (parameter
      name: (identifier))))


==========================
Typed named parameter rule
==========================

some_fact(some_variable: String);

---

(source_file
  (fact_definition
    name: (identifier)
    parameter: (parameter
      name: (identifier)
      type: (identifier))))


========================
Multiple parameters rule
========================

some_fact(true, 42, some_variable: User);

---
(source_file
  (fact_definition
    name: (identifier)
    parameter: (parameter
      literal: (bool))
    parameter: (parameter
      literal: (int))
    parameter: (parameter
      name: (identifier)
      type: (identifier))))
