test/corpus/string_literals.txt
=====================
Simple string literal
=====================

some_fact("this looks like a simple string 123");

---

(source_file
  (fact_definition
    name: (identifier)
    parameter: (parameter
      literal: (string_literal))))

=============================
String with escaped sequences
=============================

some_fact("a string with escaped sequences: \n \t \\ \" \\");

---

(source_file
  (fact_definition
    name: (identifier)
    parameter: (parameter
      literal: (string_literal))))
